--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/
 .bsp/
-
+resources/full_raw_data.csv
 ### Intellij+iml Patch ###
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
